--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed May 14 23:17:55 CEST 2008 Jim Meyering <meyering@redhat.com>
+
+	exempt gnulib/ from "make syntax-check" strcmp prohibition
+	* .x-sc_prohibit_strcmp: New file.
+	* Makefile.am (EXTRA_DIST): Add .x-sc_prohibit_strcmp.
+
 Wed May 14 15:34:43 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* qemud/qemud.c: Add 'listen_addr' config param to control
