Update Stefan's email addr

--- a/AUTHORS
+++ b/AUTHORS
@@ -43,7 +43,7 @@ Patches have also been contributed by:
   Mads Chr. Olesen     <shiyee@shiyee.dk>
   Cole Robinson        <crobinso@redhat.com>
   Anton Protopopov     <aspsk2@gmail.com>
-  Stefan de Konink     <skinkie@xs4all.nl>
+  Stefan de Konink     <dekonink@kinkrsoftware.nl>
 
   [....send patches to get your name here....]
 
