--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+Thu May 15 11:57:08 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	Support paravirt disk configuration for xenner guests
+	* src/qemu_conf.c, src/qemu_conf.h: Add support for 'xen' disk
+	bus and 'xvd' disk device names for Xenner
+	* src/util.c: Support parsing 'xvd' disk names
+	* tests/qemuxml2argv-disk-xenvbd.{args,xml}: Test case data
+	files for xvd disks.
+	* tests/qemuxml2argvtest.c, tests/qemuxml2xmltest.c: Add
+	test case for xvd disk / xen bus type
+
 Thu May 15 09:12:08 CEST 2008 Jim Meyering <meyering@redhat.com>
 
 	Avoid using STREQLEN with a literal; use STRPREFIX instead
