--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Thu May 15 12:08:08 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	Support paravirt framebuffer input configuration for xenner guests
+	* src/qemu_drive.c, src/qemu_conf.c, src/qemu_conf.h: Add support
+	 for 'xen' input device type for Xenner PVFB
+	* tests/qemuxml2argv-input-xen.{args,xml}: Test case data
+	files for xen input devices
+	* tests/qemuxml2argvtest.c, tests/qemuxml2xmltest.c: Add
+	test case for xen input devices
+
 Thu May 15 11:57:08 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	Support paravirt disk configuration for xenner guests
