--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Fri May 16 11:29:30 CEST 2008 Jim Meyering <meyering@redhat.com>
+
+	avoid a double-free bug
+	* src/qemu_conf.c (qemudParseXML): Ensure that "obj" is either
+	NULL or a valid malloc'd pointer before we might "goto error"
+	where it is freed.
+
 Thu May 15 16:06:08 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/qemu_conf.c: Remove use of strcmp()
