--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 Fri May 16 11:29:30 CEST 2008 Jim Meyering <meyering@redhat.com>
 
+	* src/xml.c: Include "c-ctype.h".
+
 	start using c-ctype functions
 	Up to now, we've been avoiding ctype functions like isspace, isdigit,
 	etc.  because they are locale-dependent.  Now that we have the c-ctype
