--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 Wed May 21 15:42:29 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
+	* python/generator.py: Don't free the underlying virDomainPtr
+	object after the virDomainDestroy call. Same for virNetworkPtr
+	From Cole Robinson.
+
+Wed May 21 15:42:29 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
 	* src/qemu_conf.c: Run qemu with -help and don't pollute
 	libvirtd environment
 
