--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu May 22 11:38:29 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* configure.in: Remove some duplicated error messages
+
 Thu May 22 11:35:29 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* configure.in: Fix misleading comment about numactl
