--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue May 27 10:40:00 BST 2008 Richard W.M. Jones <rjones@redhat.com>
+
+	Display autostart status in virsh dominfo command.
+	* src/virsh.c: Display autostart status in virsh dominfo
+	command (Shigeki Sakamoto).
+
 Tue May 27 09:54:00 BST 2008 Richard W.M. Jones <rjones@redhat.com>
 
 	Fix use of header files in disk storage backend.
