--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue May 27 14:50:00 BST 2008 Richard W.M. Jones <rjones@redhat.com>
+
+	Fix virsh dominfo test.
+	* tests/virshdata/dominfo-fc4.txt: 'virsh dominfo' test
+	matches actual output with autostart status.
+
 Tue May 27 10:40:00 BST 2008 Richard W.M. Jones <rjones@redhat.com>
 
 	Display autostart status in virsh dominfo command.
