--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu May 29 10:41:00 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* python/libvirt-python-api.xml: Add API overrides for functions
+	where the generator doesn't produce correct python wrappers
+
 Thu May 29 13:26:40 JST 2008 Atushi SAKAI <sakaia@jp.fujitsu.com>
 
 	Fix make syntax-check caused by trailing blank(s)
