--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Thu May 29 15:17:00 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/conf.c, src/conf.h, src/qemu_conf.c, src/qemu_driver.c,
+	src/test.c, src/util.c, src/xend_internal.c, src/xm_internal.c,
+	src/xml.c, tests/virshtest.c: Switch over to using new memory
+	allocation APIs.
+
 Thu May 29 14:46:00 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/memory.h, src/memory.c, tests/testutils.c: Pass allocation
