--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 Thu May 29 15:17:00 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
+	* src/libvirt.c: Don't register storage API if daemon is
+	disabled.
+	* configure.in: Fix check for parted to deal with missing
+	devel package correctly
+
+Thu May 29 15:17:00 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
 	* src/conf.c, src/conf.h, src/qemu_conf.c, src/qemu_driver.c,
 	src/test.c, src/util.c, src/xend_internal.c, src/xm_internal.c,
 	src/xml.c, tests/virshtest.c: Switch over to using new memory
