--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu May 29 16:09:00 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* qemud/Makefile.am: Change internal.h to qemud.h to fix
+	'make dist'
+
 Thu May 29 15:41:00 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* tests/testutils.c: Fix warning when OOM testing is disabled
