--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Jun  2 12:52:00 BST 2008 Richard W.M. Jones <rjones@redhat.com>
+
+	General tips for contributing patches
+	* HACKING: Added section "general tips for contributing patches"
+	to this file.
+
 Thu May 29 16:43:00 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* autobuild.sh: Only run converage tests if lcov is installed
