--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Jun  3 08:58:00 BST 2008 Richard W.M. Jones <rjones@redhat.com>
+
+	* src/xm_internal.c: If vcpu cpuset attribute is invalid
+	then display an error instead of silently ignoring it
+	(Hiroyuki Kaguchi).
+
 Mon Jun  2 12:52:00 BST 2008 Richard W.M. Jones <rjones@redhat.com>
 
 	General tips for contributing patches
