--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+Fri Jun  6 12:01:00 BST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/bridge.c, src/conf.c, src/iptables.c, src/lxc_conf.c,
+	src/lxc_container.c, src/lxc_driver.c, src/openvz_conf.c,
+	src/openvz_driver.c, src/proxy_internal.c, src/remote_internal.c,
+	src/sexpr.c, src/storage_backend.c, src/storage_backend_disk.c,
+	src/storage_backend_fs.c, src/storage_backend_iscsi.c,
+	src/storage_backend_logical.c, src/storage_conf.c,
+	src/storage_driver.c, src/xen_internal.c, src/xen_unified.c,
+	src/xend_internal.c, src/xmlrpc.c: Switch over to use the
+	internal memory allocation APIs.
+
 Fri Jun  6 11:41:00 BST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* qemud/event.c, qemud/mdns.c, qemud/qemud.c, qemud/remote.c:
