--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jun 10 17:10:31 CEST 2008 Daniel Veillard <veillard@redhat.com>
+
+	* python/generator.py python/libvir.c python/libvirt-python-api.xml:
+	  Apply patch from Cole Robinson fixing UUIDString for python
+
 Tue Jun 10 15:33:00 BST 2008 Richard W.M. Jones <rjones@redhat.com>
 
 	Pass syntax check for XM block devices over to XenD
